# flashsim-dchoices

./: .clang-format  .fuse_hidden00145b0900000003  .gitignore  CMakeLists.txt  Makefile  flashsim-dchoices.files  flashsim-dchoices.includes  readme.md  run_ComputeOracle.cpp  run_ConvertBIOTrace.cpp  run_SimCOLD.cpp  run_SimCOLDTrace.cpp  run_SimDWF.cpp  run_SimDWFBan.cpp  run_SimDWFTrace.cpp  run_SimDWFTraceBan.cpp  run_SimDWFTraceBanProbGreedy.cpp  run_SimHCWF.cpp  run_SimHCWFTrace.cpp  run_SimHCWFTraceBanProb.cpp  run_SimMaxValid.cpp  run_SimNoWear.cpp  run_SimSWF.cpp  run_SimTraceBanProb.cpp  run_SimTraceMaxValid.cpp  run_SimTraceNoWear.cpp  run_StatsBIOTrace.cpp  run_correctness.cpp  run_test.cpp  run_test_dwf.cpp  run_test_page_ftl.cpp  run_test_swf.cpp  ssd.conf  ssd.h  ssd_address.cpp  ssd_block.cpp  ssd_bm.cpp  ssd_bus.cpp  ssd_channel.cpp  ssd_config.cpp  (+15 more)
FTLs/: bast_ftl.cpp  bdftl_ftl.cpp  cold_ftl.cpp  dftl_ftl.cpp  dftl_parent.cpp  dwf_ftl.cpp  fast_ftl.cpp  hcwf_ftl.cpp  page_ftl.cpp  swf_ftl.cpp
GCAs/: costbenefit_gc.cpp  dchoices_gc.cpp  fifo_gc.cpp  greedy_gc.cpp  random_gc.cpp
HCident/: oracle_hcid.cpp  static_hcid.cpp  warm_hcid.cpp
WLvl/: ban_prob_wlvl.cpp  ban_wlvl.cpp  cleanmaxvalid_wlvl.cpp  cleanmaxvaliddch_wlvl.cpp  hotcoldswap_wlvl.cpp
drivers/: matlab_ssd_synth.cpp  run_ComputeOracle.cpp  run_ConvertBIOTrace.cpp  run_SSD_Synth.cpp  run_SimBanProb.cpp  run_SimHCGCSwap.cpp  run_SimHCGCSwap_Erase.cpp  run_SimHCSwap.cpp  run_SimHCSwapRelative.cpp  run_SimMaxValid.cpp  run_SimNoWear.cpp  run_SimSwap.cpp  run_SimTraceBanProb.cpp  run_SimTraceHCGCSwap.cpp  run_SimTraceHCGCSwap_Erase.cpp  run_SimTraceHCSwap.cpp  run_SimTraceHCSwapRelative.cpp  run_SimTraceMaxValid.cpp  run_SimTraceNoWear.cpp  run_SimTraceSwap.cpp  run_StatsBIOTrace.cpp  run_utils.cpp
include/: SSDSim.h  ssd.h  ssd_run.h  util.h
matlab/: hotcold_firstcolderase.m  plotBanFairness.m  plotBanHCSwapCBD.m
sh/: format_code.sh  paramshcwf.csv  paramsoptd.csv  runSimTraceSwap.sh  runSimulationExample.sh
slidesd10/: document2perframe.tex
slidessynth-wlvl/: document2perframe-cbd.fdb_latexmk  document2perframe-cbd.fls  document2perframe-cbd.tex  document2perframe.fdb_latexmk  document2perframe.fls  document2perframe.tex
slidestemp/: document2perframe.tex
slidestemp/2perframe/: document.tex
src/: SSDSim.cpp  flashsim-dchoices.files  ssd_address.cpp  ssd_block.cpp  ssd_bm.cpp  ssd_bus.cpp  ssd_channel.cpp  ssd_config.cpp  ssd_controller.cpp  ssd_die.cpp  ssd_event.cpp  ssd_eventreader.cpp  ssd_ftl.cpp  ssd_ftlparent.cpp  ssd_gc.cpp  ssd_hcident.cpp  ssd_package.cpp  ssd_page.cpp  ssd_plane.cpp  ssd_planeaddress.cpp  ssd_raidssd.cpp  ssd_ram.cpp  ssd_ssd.cpp  ssd_stats.cpp  ssd_util.cpp  ssd_wl.cpp  verification.cpp
src/FTLs/: bast_ftl.cpp  bdftl_ftl.cpp  cold_dHC_ftl.cpp  cold_ftl.cpp  dftl_ftl.cpp  dftl_parent.cpp  dswapwf_ftl.cpp  dwf_ftl.cpp  dwfwdiff_ftl.cpp  fast_ftl.cpp  hcswapwf_ftl.cpp  hcswapwf_hctie_ftl.cpp  hcwf_dHC_ftl.cpp  hcwf_ftl.cpp  hcwffalse_ftl.cpp  hcwffixedfalse_ftl.cpp  hcwfplusswap_ftl.cpp  hcwfswap_erase.cpp  hcwfswap_erase_validtie.cpp  hcwfswap_erasetie_ftl.cpp  hcwfwdiff_ftl.cpp  page_ftl.cpp  stat_ftl.cpp  swf_ftl.cpp
src/GCAs/: costagetime_gc.cpp  costbenefit_gc.cpp  dch_costagetime_gc.cpp  dch_costbenefit_gc.cpp  dch_erase_gc.cpp  dch_erase_tievalidpages_gc.cpp  dch_hotcold_gc.cpp  dch_tieerasures_gc.cpp  dchoices_gc.cpp  fifo_gc.cpp  greedy_gc.cpp  random_gc.cpp
src/HCident/: oracle_hcid.cpp  static_false_hcid.cpp  static_hcid.cpp  warm_hcid.cpp
src/WLvl/: ban_prob_wlvl.cpp  ban_wlvl.cpp  cleanmaxvalid_wlvl.cpp  cleanmaxvaliddch_wlvl.cpp  hotcoldgcswap_erase_wlvl.cpp  hotcoldgcswap_wlvl.cpp  hotcoldswap_wlvl.cpp  randomswap_wlvl.cpp
src/gen_trace/: generator.c  parsing.c
src/mex/: mex_ssd.c  ssd_mex_doc.txt
src/util/: util_func.cpp  util_rng.cpp
traces_old/: Booting_log176.txt  Installing_log181.txt  calout_log147.txt
util/: util_func.cpp  util_rng.cpp
